--- a/muscChildrensNewsletter.html
+++ b/muscChildrensNewsletter.html
@@ -468,7 +468,7 @@
             <tr>
               <td align="center" valign="top" id="heroContainer" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #fff;">
                 <!--<img src="https://s3.amazonaws.com/clres/musc/sept+18+email/images/56c1ce27-5572-49e5-927b-438f484655a0.jpg" alt="Main Feature Image"  id="heroImage" style="border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">-->
-				<img src="../images/hero.png" alt="Main Feature Image"  id="heroImage" style="border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+				<img src="hero.png" alt="Main Feature Image"  id="heroImage" style="border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
               </td>
             </tr>
 
@@ -618,7 +618,7 @@
 
                                               <td>
                                                 <!--<img src="http://image.S10.exacttarget.com/lib/fe3a15707564047f721c73/m/1/90488d77-d5b2-4cd4-9fc0-f940894db5b8.png" alt="News in motion icon" height="25" width="25" style="padding-right:10px;">-->
-												<img src="../images/clock.jpg" alt="News in motion icon" height="25" width="25" style="padding-right:10px;">
+												<img src="clock.jpg" alt="News in motion icon" height="25" width="25" style="padding-right:10px;">
                                               </td>
                                               <td style="margin: 0;padding: 0;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;font-size: 22px;font-weight: 300;line-height: 115%;text-align: left; padding-left 10px; font-weight: 600;">News in Motion</td>
                                               
@@ -643,7 +643,7 @@
 
                         <!-- News in motion image here -->
                                                   <!--<img src="http://image.s6.exacttarget.com/lib/fe9a12727665047a77/m/1/flu-vaccine-2018.jpg" alt=""  width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">-->
-													<img src="../images/baby-flu-shot.jpg" alt=""  width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+													<img src="baby-flu-shot.jpg" alt=""  width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                                                 </td>
                                               </tr>
 
@@ -718,7 +718,7 @@
 
                                     <td>
                                       <!--<img src="http://image.S10.exacttarget.com/lib/fe3a15707564047f721c73/m/1/2f7cb6b6-ccf0-4108-b714-d0475ff78ad8.png" alt="Streaming now icon" height="25" width="25" style="padding-right:10px;">-->
-									  <img src="../images/wifi.jpg" alt="Streaming now icon" height="25" width="25" style="padding-right:10px;">
+									  <img src="wifi.jpg" alt="Streaming now icon" height="25" width="25" style="padding-right:10px;">
                                     </td>
                                     <td style="margin: 0;padding: 0;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;font-size: 22px;font-weight: 600;line-height: 115%;text-align: left; padding-left 10px;">Streaming Now</td>
                                   </tr>
@@ -799,7 +799,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
 
                                     <td>
                                       <!--<img src="http://image.S10.exacttarget.com/lib/fe3a15707564047f721c73/m/1/5acb9d29-7bf8-43b9-b992-312f99e6982e.png" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">-->
-										<img src="../images/calendar.jpg" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">									  
+										<img src="calendar.jpg" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">									  
                                     </td>
                                     <td style="margin: 0;padding: 0;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;font-size: 22px;font-weight: 600;line-height: 115%;text-align: left; padding-left 10px;">A Day in the Life</td>
                                   </tr>
@@ -887,7 +887,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
 
                                     <td>
                                       <!--<img src="http://image.S10.exacttarget.com/lib/fe3a15707564047f721c73/m/1/f85a611d-073f-4812-8afb-96a1a996db71.png" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">-->
-									  <img src="../images/note.jpg" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">
+									  <img src="note.jpg" alt="A day in the life icon" height="25" width="25" style="padding-right:10px;">
                                     </td>
                                     <td style="margin: 0;padding: 0;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;font-size: 22px;font-weight: 600;line-height: 115%;text-align: left; padding-left 10px;">Notes</td>
                                   </tr>
@@ -910,7 +910,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                                     <tr>
 
                                       <td align="center" valign="top" width="100%" class="articleContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-size: 16px;line-height: 75%;padding-left: 10px;font-family:Arial, sans-serif; text-align: center;">
-										<img src="../images/organs.jpg" alt="" height="225" width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">										  
+										<img src="organs.jpg" alt="" height="225" width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">										  
 										  <a href="http://www.musckids.org/our-services/cleft-palate-program" target="_blank" style="border: 0; color: #606060; text-decoration: none; color: #005288; font-size: 1.1em; margin-top: 30px; display: block;"><strong>How Can You Mens a Broken Heart</strong></a><br><br>
 										  
 										  <div align="left">
@@ -991,9 +991,9 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
   <!--  Physician Resources and Provider Directory images  - Helen, insert uploaded quick link images here and add links -->
                                                           <table border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                                                                   <tr>
-                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/index.html#provider" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="physician resources" src="../images/books.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
+                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/index.html#provider" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="physician resources" src="books.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
                                                                       <td width="20" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"></td>
-                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/providerdirectory/providers.aspx" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="Provider Directory" src="../images/stethoscope.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
+                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/providerdirectory/providers.aspx" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="Provider Directory" src="stethoscope.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
                                                                   </tr>
                                                               </table>
                                                           </td>
@@ -1035,9 +1035,9 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
   <!-- Clinical Trials and Carelink images  - Helen, insert uploaded quick link images here and add links below-->
                                                               <table border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                                                                   <tr>
-                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/index.html#clinical_trials" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="Clinical Trials" src="../images/heart.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
+                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/index.html#clinical_trials" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="Clinical Trials" src="heart.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
                                                                       <td width="20" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"></td>
-                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/electronic-medical-records/health-link-faq.html" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="MUSC Health CareLink"src="../images/suitcase.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
+                                                                      <td width="135" align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><a href="http://www.muschealth.org/physician-portal/electronic-medical-records/health-link-faq.html" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img alt="MUSC Health CareLink"src="suitcase.jpg" border="0" style="width: 80%; display: block;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"></a></td>
                                                                   </tr>
                                                               </table>
                                                           </td>
@@ -1083,7 +1083,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                <td align="center" valign="top" id="footerContainer" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;padding: 40px;background-color: #005187; padding-bottom: 0;">
 
 
-                 <table border="0" cellpadding="0" cellspacing="0" width="600" id="footerBlock" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; background-image: url(../images/footer.jpg); background-size: 100% auto; height: 300px;">
+                 <table border="0" cellpadding="0" cellspacing="0" width="600" id="footerBlock" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; background-image: url(footer.jpg); background-size: 100% auto; height: 300px;">
 
                      <tr>
                        <td width="100%" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
@@ -1098,12 +1098,12 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                                       <tr>
                                          <td align="center" valign="middle" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 
-                                            <a href="https://twitter.com/MUSCkids" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img src="../images/twitter.png" alt="Sign Up for Twitter" border="0" width="44" height="44" style="border: none;outline: none;text-decoration: none;margin-right: 40px;-ms-interpolation-mode: bicubic;"></a>
+                                            <a href="https://twitter.com/MUSCkids" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img src="twitter.png" alt="Sign Up for Twitter" border="0" width="44" height="44" style="border: none;outline: none;text-decoration: none;margin-right: 40px;-ms-interpolation-mode: bicubic;"></a>
 
 
                                             <a href="https://www.facebook.com/MUSCkids" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img src="facebook.png" alt="Sign Up for Facebook" border="0" width="44" height="44" style="border: none;outline: none;text-decoration: none;margin-right: 40px;-ms-interpolation-mode: bicubic;"></a>
 
-                                            <a href="https://instagram.com/MUSCKids" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img src="../instagram.png" alt="Sign Up for Instagram" border="0" width="44" height="44" style="border: none;outline: none;text-decoration: none;margin-right: 40px;-ms-interpolation-mode: bicubic;"></a>
+                                            <a href="https://instagram.com/MUSCKids" target="_blank" style="-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;color: #005187;"><img src="instagram.png" alt="Sign Up for Instagram" border="0" width="44" height="44" style="border: none;outline: none;text-decoration: none;margin-right: 40px;-ms-interpolation-mode: bicubic;"></a>
 
                                          </td>
                                       </tr>
