--- a/muscChildrensNewsletter.html
+++ b/muscChildrensNewsletter.html
@@ -643,7 +643,7 @@
 
                         <!-- News in motion image here -->
                                                   <!--<img src="http://image.s6.exacttarget.com/lib/fe9a12727665047a77/m/1/flu-vaccine-2018.jpg" alt=""  width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">-->
-													<img src="baby-flu-shot.jpg" alt=""  width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+													<img src="baby-flu-shot.jpg" alt=""  width="600" class="articleImage" style="width: 100%; border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                                                 </td>
                                               </tr>
 
@@ -910,7 +910,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                                     <tr>
 
                                       <td align="center" valign="top" width="100%" class="articleContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-size: 16px;line-height: 75%;padding-left: 10px;font-family:Arial, sans-serif; text-align: center;">
-										<img src="organs.jpg" alt="" height="225" width="600" class="articleImage" style="border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">										  
+										<img src="organs.jpg" alt="" height="225" width="600" class="articleImage" style="width: 100%; border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">										  
 										  <a href="http://www.musckids.org/our-services/cleft-palate-program" target="_blank" style="border: 0; color: #606060; text-decoration: none; color: #005288; font-size: 1.1em; margin-top: 30px; display: block;"><strong>How Can You Mens a Broken Heart</strong></a><br><br>
 										  
 										  <div align="left">
