--- a/muscChildrensNewsletter.html
+++ b/muscChildrensNewsletter.html
@@ -909,7 +909,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                                   <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                                     <tr>
 
-                                      <td align="center" valign="top" width="100%" class="articleContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-size: 16px;line-height: 75%;padding-left: 10px;font-family:Arial, sans-serif; text-align: center;">
+                                      <td align="center" valign="top" width="100%" class="articleContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-size: 16px; padding-left: 10px;font-family:Arial, sans-serif; text-align: center;">
 										<img src="organs.jpg" alt="" height="225" width="600" class="articleImage" style="width: 100%; border: 1px solid #dddddd;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">										  
 										  <a href="http://www.musckids.org/our-services/cleft-palate-program" target="_blank" style="border: 0; color: #606060; text-decoration: none; color: #005288; font-size: 1.1em; margin-top: 30px; display: block;"><strong>How Can You Mens a Broken Heart</strong></a><br><br>
 										  
@@ -1083,7 +1083,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                <td align="center" valign="top" id="footerContainer" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;padding: 40px;background-color: #005187; padding-bottom: 0;">
 
 
-                 <table border="0" cellpadding="0" cellspacing="0" width="600" id="footerBlock" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; background-image: url(footer.jpg); background-size: 100% auto; height: 300px;">
+                 <table border="0" cellpadding="0" cellspacing="0" width="600" id="footerBlock" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; background-repeat: no-repeat; background-image: url(footer.jpg); background-size: 100% auto; height: 300px;">
 
                      <tr>
                        <td width="100%" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
@@ -1120,7 +1120,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                     </tr>
 
                    <tr>
-                     <td align="center" valign="top" class="footerContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #ffffff;font-size: 13px;line-height: 0%;padding-bottom: 0px;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;font-weight: 100;letter-spacing: 1px;">
+                     <td align="center" valign="top" class="footerContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #ffffff;font-size: 13px; padding-bottom: 0px;font-family: 'Museo_Slab', sans-serif, Arial, sans-serif;font-weight: 100;letter-spacing: 1px;">
                       For questions regarding content, please contact MUSC Health
                     </td>
                    </tr>
