--- a/muscChildrensNewsletter.html
+++ b/muscChildrensNewsletter.html
@@ -530,16 +530,16 @@
                                                                                         <td valign="top" width="115" align="center" style="font-size: 16px;color: #fff;font-weight: 200;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><font face="font-family:'Museo_Slab', sans-serif, Arial, sans-serif;"><a href="http://www.muschealth.org/patients-visitors/contact-us/index.html" target="_blank" style="font-size: .75em; color: #005187;font-weight: 700; text-transform: uppercase; text-decoration: none;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Arial, sans-serif; border-bottom: 4px solid #00b6f0;">Contact Us</a>  </font></td>
                                                                                         <td width="20" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"></td>
 																						<td valign="top" width="155" align="center" style="font-size: 16px;color: #fff;font-weight: 200;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"><font face="font-family:'Museo_Slab', sans-serif, Arial, sans-serif;"><a href="http://www.muschealth.org/physician-portal/index.html" target="_blank" style="font-size: .75em; color: #005187; font-weight: 700; text-transform: uppercase; text-decoration: none;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Arial, sans-serif; border-bottom: 4px solid #00b6f0;">Physician Portal </a></font></td>
-																						<td width="175">						
-																						 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="articleButton" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; border-radius: 4px;height: 20px; background-image: url(images/hero-btn.png); background-color: transparent; background-size: 100% auto;">
+																						<!--<td width="175">						
+																						 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="articleButton" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%; border-radius: 4px;height: 20px; background-image: url(hero-btn.png); background-color: transparent; background-size: 100% auto;">
 																							<tr>
 																							  <td align="center" valign="middle" class="articleButtonContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #ffffff;font-size: 16px;font-weight: 200;line-height: 100%;padding: 10px;text-align: center;text-decoration: none;">
-															<!-- Helen, insert link to full article here - On the Horizon -->
+															<!-- Helen, insert link to full article here - On the Horizon 
 																								<a href="%%view_email_url%%" target="_blank" title="Button" style="color: #000000;text-decoration: none;font-weight: 100;letter-spacing: 1px;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Arial, sans-serif;font-size: 14px;line-height: 100%;padding: 7px;text-align: center; color: #fff; padding: 0;">Forward to a Colleague</a>
 																							  </td>
 																							</tr>
 																						  </table>																							
-																						</td>
+																						</td>-->
                                                                                     </tr>
                                                                                 </table>
                                                                             </td>
