--- a/muscChildrensNewsletter.html
+++ b/muscChildrensNewsletter.html
@@ -950,7 +950,7 @@ Listen now to learn more about surgical correction of adolescent idiopathic scol
                                                             <tr>
                                                               <td align="center" valign="middle" class="articleButtonContent" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #ffffff;font-size: 12px;font-weight: 200;line-height: 100%;padding: 10px;text-align: center;text-decoration: none;">
                             <!-- Helen, insert link to full article here - On the Horizon -->
-                                                                <a href="http://www.muschealth.org/pn/2018/summer/in-short/septal-occluder/index.html" target="_blank" title="Button" style="color: #8BB43F;;text-decoration: none;font-weight: 100;letter-spacing: 1px;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Arial, sans-serif;font-size: 16px;line-height: 100%;padding: 10px;text-align: center;">Read full article</a>
+                                                                <a href="http://www.muschealth.org/pn/2018/summer/in-short/septal-occluder/index.html" target="_blank" title="Button" style="color: #8BB43F; font-weight: 100;letter-spacing: 1px;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Arial, sans-serif;font-size: 16px;line-height: 100%;padding: 10px;text-align: center;">Read full article</a>
                                                               </td>
                                                             </tr>
 
